[package]
name = "estra"
version = "0.4.1"
edition = "2021"
authors = ["sarah <>"]
description = "tui for diol"
readme = "README.md"
repository = "https://github.com/sarah-ek/estra/"
license = "MIT"
keywords = ["benchmark"]


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
colorgrad = "0.6.2"
crossterm = "0.27.0"
diol = { version = "0.6.0" }
ratatui = "0.26.2"
serde_json = "1.0.116"
tui-scrollview = "0.3.4"

[profile.dev]
opt-level=3

[dev-dependencies]
popcnt = "0.1.0"
